fix grid alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 3vh;
 }
 p.footer {
     font-size : calc(2vmin);
@@ -16,8 +17,8 @@ p.footer {
     color: white;
     display: flex;
     flex-direction: column;
-    min-height: 20vh;
-    max-height: 20vh;
+    min-height: calc(20vh - 3vh);
+    max-height: calc(20vh - 3vh);
     max-width: 100vw;
     align-items: center;
     justify-content: flex-end;
